--- a/portable_config/script-opts.conf
+++ b/portable_config/script-opts.conf
@@ -69,7 +69,7 @@
 #script-opts-append = uosc-autoload=yes
 #script-opts-append = uosc-autoload_types=video,audio
 
-#script-opts-append = uosc-ui_scale=2
+#script-opts-append = uosc-scale=2
 #script-opts-append = uosc-click_threshold=1000
 
  script-opts-append = uosc-video_types=avi,flv,m2ts,m4v,mkv,mov,mp4,mpeg,mpg,ogv,rm,rmvb,ts,vob,webm,wmv
