--- a/portable_config/mpv.conf
+++ b/portable_config/mpv.conf
@@ -12,7 +12,7 @@
  # 基础 #
  ########
 
-#vo = gpu-next
+ vo = gpu-next
 #gpu-context = winvk
 #d3d11-exclusive-fs = yes
 #d3d11-flip = no
@@ -32,6 +32,8 @@
 #input-ipc-server = mpvpipe
  input-builtin-bindings = no
 #pause = yes
+
+#target-colorspace-hint = yes
 
  hr-seek-framedrop = no
  save-position-on-quit = yes
@@ -83,7 +85,7 @@
  volume = 100   # 注意：此参数当前在 script-opts.conf 文件中存在关联处理（参见 “保存全局属性并恢复” 部分）
  volume-max = 130
  audio-channels = stereo
- alang = chs,sc,zh,chi,zho
+#alang = chs,sc,zh-cn,chi,zh,zh-tw,cht,zho,ze
  audio-file-auto = fuzzy
 
 
@@ -99,7 +101,7 @@
  video-sync = display-resample
  video-sync-max-video-change = 5
  interpolation = yes
-#tscale = mitchell
+#tscale = sphinx
 
  cscale = bilinear
  scale = spline36
@@ -112,7 +114,8 @@
 #deband = yes
 
 #tone-mapping = hable
- gamut-mapping-mode = clip
+#gamut-mapping-mode = clip
+ hdr-peak-percentile = 99.99
 
 
  ####################
@@ -133,9 +136,9 @@
 
  sub-auto = fuzzy
  sub-file-paths = sub;subtitles
- slang = chs,sc,zh,chi,zho
+ slang = chs,sc,zh-cn,chi,zh,zh-tw,cht,zho,ze
  subs-fallback = yes
-#blend-subtitles = video
+#blend-subtitles = yes
 
  sub-font = "LXGW WenKai Mono"
  sub-font-size = 44
