--- a/portable_config/profiles.conf
+++ b/portable_config/profiles.conf
@@ -12,15 +12,15 @@
 
 [ontop_playback]
  profile-desc = 基于播放状态的自动置顶
-#profile-cond = not pause
+#profile-cond = not pause                # 未自动启用
  profile-restore = copy
  ontop = yes
 
 
 ## https://github.com/mpv-player/mpv/issues/11122
 [vsync_auto]
- profile-desc = 基于刷新率或帧率的同步模式
- profile-cond = p.display_fps>122 or p.container_fps>32
+ profile-desc = 基于帧率或垂直同步率的自动视频同步
+ profile-cond = p.container_fps>32 or (p.display_fps/container_fps) > 3.2
  profile-restore = copy
  interpolation = no
  video-sync = audio
@@ -35,7 +35,7 @@
 
 [save_props_auto]
  profile-desc = 基于进度或时长或视频轨类型的自动保存属性
- profile-cond = p.eof_reached or p.time_remaining<=300 or p.duration<=300 or not vid or p["current-tracks/video/albumart"] or p["current-tracks/video/image"]
+ profile-cond = p.percent_pos>=90 or p.duration<=300 or not vid or p["current-tracks/video/albumart"] or p["current-tracks/video/image"]
  profile-restore = copy
  save-position-on-quit = no
 
@@ -51,12 +51,4 @@
 #sub-back-color = "#00000000"
 #sub-shadow-offset = 0
 
-
-[HDR_DolbyVision]
- profile-desc = hdr杜比视界
- profile-cond = filename:match("%.DoVi")
- profile-restore = copy
- vo = gpu-next
- hdr-compute-peak = no
- tone-mapping = st2094-40
 
